@@ -62,7 +62,27 @@ name|java
 operator|.
 name|util
 operator|.
+name|ArrayList
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|Arrays
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|List
 import|;
 end_import
 
@@ -83,6 +103,22 @@ operator|.
 name|framework
 operator|.
 name|TestCase
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|commons
+operator|.
+name|math3
+operator|.
+name|util
+operator|.
+name|Pair
 import|;
 end_import
 
@@ -210,6 +246,20 @@ name|org
 operator|.
 name|apache
 operator|.
+name|hadoop
+operator|.
+name|test
+operator|.
+name|GenericTestUtils
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
 name|commons
 operator|.
 name|cli
@@ -267,6 +317,18 @@ operator|.
 name|collect
 operator|.
 name|Maps
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|junit
+operator|.
+name|Assert
+operator|.
+name|fail
 import|;
 end_import
 
@@ -572,6 +634,373 @@ argument_list|,
 name|files
 argument_list|)
 expr_stmt|;
+block|}
+comment|/**    * Test the case where the libjars, files and archives arguments    * contains an empty token, which should create an IllegalArgumentException.    */
+DECL|method|testEmptyFilenames ()
+specifier|public
+name|void
+name|testEmptyFilenames
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|List
+argument_list|<
+name|Pair
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+argument_list|>
+name|argsAndConfNames
+init|=
+operator|new
+name|ArrayList
+argument_list|<
+name|Pair
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+argument_list|>
+argument_list|()
+decl_stmt|;
+name|argsAndConfNames
+operator|.
+name|add
+argument_list|(
+operator|new
+name|Pair
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+argument_list|(
+literal|"-libjars"
+argument_list|,
+literal|"tmpjars"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|argsAndConfNames
+operator|.
+name|add
+argument_list|(
+operator|new
+name|Pair
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+argument_list|(
+literal|"-files"
+argument_list|,
+literal|"tmpfiles"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|argsAndConfNames
+operator|.
+name|add
+argument_list|(
+operator|new
+name|Pair
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+argument_list|(
+literal|"-archives"
+argument_list|,
+literal|"tmparchives"
+argument_list|)
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|Pair
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+name|argAndConfName
+range|:
+name|argsAndConfNames
+control|)
+block|{
+name|String
+name|arg
+init|=
+name|argAndConfName
+operator|.
+name|getFirst
+argument_list|()
+decl_stmt|;
+name|String
+name|configName
+init|=
+name|argAndConfName
+operator|.
+name|getSecond
+argument_list|()
+decl_stmt|;
+name|File
+name|tmpFileOne
+init|=
+operator|new
+name|File
+argument_list|(
+name|testDir
+argument_list|,
+literal|"tmpfile1"
+argument_list|)
+decl_stmt|;
+name|Path
+name|tmpPathOne
+init|=
+operator|new
+name|Path
+argument_list|(
+name|tmpFileOne
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|File
+name|tmpFileTwo
+init|=
+operator|new
+name|File
+argument_list|(
+name|testDir
+argument_list|,
+literal|"tmpfile2"
+argument_list|)
+decl_stmt|;
+name|Path
+name|tmpPathTwo
+init|=
+operator|new
+name|Path
+argument_list|(
+name|tmpFileTwo
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|localFs
+operator|.
+name|create
+argument_list|(
+name|tmpPathOne
+argument_list|)
+expr_stmt|;
+name|localFs
+operator|.
+name|create
+argument_list|(
+name|tmpPathTwo
+argument_list|)
+expr_stmt|;
+name|String
+index|[]
+name|args
+init|=
+operator|new
+name|String
+index|[
+literal|2
+index|]
+decl_stmt|;
+name|args
+index|[
+literal|0
+index|]
+operator|=
+name|arg
+expr_stmt|;
+comment|// create an empty path in between two valid files,
+comment|// which prior to HADOOP-10820 used to result in the
+comment|// working directory being added to "tmpjars" (or equivalent)
+name|args
+index|[
+literal|1
+index|]
+operator|=
+name|String
+operator|.
+name|format
+argument_list|(
+literal|"%s,,%s"
+argument_list|,
+name|tmpFileOne
+operator|.
+name|toURI
+argument_list|()
+operator|.
+name|toString
+argument_list|()
+argument_list|,
+name|tmpFileTwo
+operator|.
+name|toURI
+argument_list|()
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
+try|try
+block|{
+operator|new
+name|GenericOptionsParser
+argument_list|(
+name|conf
+argument_list|,
+name|args
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"Expected exception for empty filename"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IllegalArgumentException
+name|e
+parameter_list|)
+block|{
+comment|// expect to receive an IllegalArgumentException
+name|GenericTestUtils
+operator|.
+name|assertExceptionContains
+argument_list|(
+literal|"File name can't be"
+operator|+
+literal|" empty string"
+argument_list|,
+name|e
+argument_list|)
+expr_stmt|;
+block|}
+comment|// test zero file list length - it should create an exception
+name|args
+index|[
+literal|1
+index|]
+operator|=
+literal|",,"
+expr_stmt|;
+try|try
+block|{
+operator|new
+name|GenericOptionsParser
+argument_list|(
+name|conf
+argument_list|,
+name|args
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"Expected exception for zero file list length"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IllegalArgumentException
+name|e
+parameter_list|)
+block|{
+comment|// expect to receive an IllegalArgumentException
+name|GenericTestUtils
+operator|.
+name|assertExceptionContains
+argument_list|(
+literal|"File name can't be"
+operator|+
+literal|" empty string"
+argument_list|,
+name|e
+argument_list|)
+expr_stmt|;
+block|}
+comment|// test filename with space character
+comment|// it should create exception from parser in URI class
+comment|// due to URI syntax error
+name|args
+index|[
+literal|1
+index|]
+operator|=
+name|String
+operator|.
+name|format
+argument_list|(
+literal|"%s, ,%s"
+argument_list|,
+name|tmpFileOne
+operator|.
+name|toURI
+argument_list|()
+operator|.
+name|toString
+argument_list|()
+argument_list|,
+name|tmpFileTwo
+operator|.
+name|toURI
+argument_list|()
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
+try|try
+block|{
+operator|new
+name|GenericOptionsParser
+argument_list|(
+name|conf
+argument_list|,
+name|args
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"Expected exception for filename with space character"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IllegalArgumentException
+name|e
+parameter_list|)
+block|{
+comment|// expect to receive an IllegalArgumentException
+name|GenericTestUtils
+operator|.
+name|assertExceptionContains
+argument_list|(
+literal|"URISyntaxException"
+argument_list|,
+name|e
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 block|}
 comment|/**    * Test that options passed to the constructor are used.    */
 annotation|@
